@@ -32,6 +32,7 @@ CHANGES INTRODUCED IN XINS 0.209:                                (1.0.0-beta2)
   - Added unit test class for Boolean type class.
   - Added fileFound() method to FileWatcher.Listener interface.
     WARNING: This may break existing code.
+  - Added unit test for the HTTPServiceCaller.
 
 * XINS/Java Client Framework:
   - Fixed SF.net bug #1043048. Previously a ClassCastException was thrown if
